fix(e2e): karate version fixed and kafka issue solved